--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,16 @@
 .toggle-all {
-    height: 60px!important;
-    right: auto!important;
-    width: 40px!important
+    height: 60px !important;
+    right: auto !important;
+    width: 40px !important
 }
 
 .toggle-all-label {
     pointer-events: none
 }
 
-body,button,html {
+body,
+button,
+html {
     margin: 0;
     padding: 0
 }
@@ -26,7 +28,8 @@ button {
     vertical-align: baseline
 }
 
-body,button {
+body,
+button {
     -moz-osx-font-smoothing: grayscale
 }
 
@@ -34,7 +37,7 @@ body {
     -webkit-font-smoothing: antialiased;
     background: #f5f5f5;
     color: #111;
-    font: 14px Helvetica Neue,Helvetica,Arial,sans-serif;
+    font: 14px Helvetica Neue, Helvetica, Arial, sans-serif;
     font-weight: 300;
     line-height: 1.4em;
     margin: 0 auto;
@@ -44,25 +47,25 @@ body {
 
 .todoapp {
     background: #fff;
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,.2),0 25px 50px 0 rgba(0,0,0,.1);
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .2), 0 25px 50px 0 rgba(0, 0, 0, .1);
     margin: 130px 0 40px;
     position: relative
 }
 
 .todoapp input::-webkit-input-placeholder {
-    color: rgba(0,0,0,.4);
+    color: rgba(0, 0, 0, .4);
     font-style: italic;
     font-weight: 400
 }
 
 .todoapp input::-moz-placeholder {
-    color: rgba(0,0,0,.4);
+    color: rgba(0, 0, 0, .4);
     font-style: italic;
     font-weight: 400
 }
 
 .todoapp input::input-placeholder {
-    color: rgba(0,0,0,.4);
+    color: rgba(0, 0, 0, .4);
     font-style: italic;
     font-weight: 400
 }
@@ -80,11 +83,12 @@ body {
     width: 100%
 }
 
-.edit,.new-todo {
+.edit,
+.new-todo {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     border: 1px solid #999;
-    box-shadow: inset 0 -1px 5px 0 rgba(0,0,0,.2);
+    box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, .2);
     box-sizing: border-box;
     color: inherit;
     font-family: inherit;
@@ -97,12 +101,22 @@ body {
     width: 100%
 }
 
-.new-todo {
-    background: rgba(0,0,0,.003);
-    border: none;
-    box-shadow: inset 0 -2px 1px rgba(0,0,0,.03);
+.toggle-all-container {
+    position: absolute;
     height: 65px;
-    padding: 16px 16px 16px 60px
+    display: flex;
+    align-items: center;
+    z-index: 1;
+}
+
+.new-todo {
+    background: rgba(0, 0, 0, .003);
+    border: none;
+    box-shadow: inset 0 -2px 1px rgba(0, 0, 0, .03);
+    height: 65px;
+    padding: 16px 16px 16px 60px;
+    position: relative;
+    z-index: 0;
 }
 
 .toggle-all {
@@ -226,7 +240,8 @@ body {
     width: 40px
 }
 
-.todo-list li .destroy:focus,.todo-list li .destroy:hover {
+.todo-list li .destroy:focus,
+.todo-list li .destroy:hover {
     color: #c18585
 }
 
@@ -259,7 +274,7 @@ body {
 
 .footer:before {
     bottom: 0;
-    box-shadow: 0 1px 1px rgba(0,0,0,.2),0 8px 0 -3px #f6f6f6,0 9px 1px -3px rgba(0,0,0,.2),0 16px 0 -6px #f6f6f6,0 17px 2px -6px rgba(0,0,0,.2);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, .2), 0 8px 0 -3px #f6f6f6, 0 9px 1px -3px rgba(0, 0, 0, .2), 0 16px 0 -6px #f6f6f6, 0 17px 2px -6px rgba(0, 0, 0, .2);
     content: "";
     height: 50px;
     left: 0;
@@ -307,7 +322,8 @@ body {
     border-color: #ce4646
 }
 
-.clear-completed,html .clear-completed:active {
+.clear-completed,
+html .clear-completed:active {
     cursor: pointer;
     float: right;
     line-height: 19px;
@@ -320,8 +336,10 @@ body {
 }
 
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
-    .todo-list li .toggle,.toggle-all {
-        background:none
+
+    .todo-list li .toggle,
+    .toggle-all {
+        background: none
     }
 
     .todo-list li .toggle {
@@ -331,7 +349,7 @@ body {
 
 @media (max-width: 430px) {
     .footer {
-        height:50px
+        height: 50px
     }
 
     .filters {
@@ -339,7 +357,9 @@ body {
     }
 }
 
-.toggle-all:focus+label,.toggle:focus+label,:focus {
+.toggle-all:focus+label,
+.toggle:focus+label,
+:focus {
     box-shadow: 0 0 2px 2px #cf7d7d;
     outline: 0
 }
