--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>todoapp</title>
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="shortcut icon" href="../public/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
     <section id="app" class="todoapp"></section>
-    <script type="module" src="todo.js"></script>
+    <script type="module" src="../src/todo.js"></script>
 </body>
 
 </html>
