--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,5 @@
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="shortcut icon" href="../public/favicon.ico" type="image/x-icon">
 </head>
-
-<body>
-    <section id="app" class="todoapp"></section>
-    <script type="module" src="../src/todo.js"></script>
-</body>
-
+<script type="module" src="../src/index.js"></script>
 </html>
