--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,27 @@
+@charset "utf-8";.visually-hidden {
+    clip: rect(0 0 0 0);
+    border: 0;
+    clip-path: inset(50%);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px
+}
+
 .toggle-all {
-    height: 60px !important;
-    right: auto !important;
-    width: 40px !important
+    height: 60px!important;
+    right: auto!important;
+    width: 40px!important
 }
 
 .toggle-all-label {
     pointer-events: none
 }
 
-body,
-button,
-html {
+body,button,html {
     margin: 0;
     padding: 0
 }
@@ -28,8 +39,7 @@ button {
     vertical-align: baseline
 }
 
-body,
-button {
+body,button {
     -moz-osx-font-smoothing: grayscale
 }
 
@@ -37,7 +47,7 @@ body {
     -webkit-font-smoothing: antialiased;
     background: #f5f5f5;
     color: #111;
-    font: 14px Helvetica Neue, Helvetica, Arial, sans-serif;
+    font: 14px Helvetica Neue,Helvetica,Arial,sans-serif;
     font-weight: 300;
     line-height: 1.4em;
     margin: 0 auto;
@@ -45,27 +55,31 @@ body {
     min-width: 230px
 }
 
+.hidden {
+    display: none
+}
+
 .todoapp {
     background: #fff;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .2), 0 25px 50px 0 rgba(0, 0, 0, .1);
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,.2),0 25px 50px 0 rgba(0,0,0,.1);
     margin: 130px 0 40px;
     position: relative
 }
 
 .todoapp input::-webkit-input-placeholder {
-    color: rgba(0, 0, 0, .4);
+    color: rgba(0,0,0,.4);
     font-style: italic;
     font-weight: 400
 }
 
 .todoapp input::-moz-placeholder {
-    color: rgba(0, 0, 0, .4);
+    color: rgba(0,0,0,.4);
     font-style: italic;
     font-weight: 400
 }
 
 .todoapp input::input-placeholder {
-    color: rgba(0, 0, 0, .4);
+    color: rgba(0,0,0,.4);
     font-style: italic;
     font-weight: 400
 }
@@ -83,12 +97,11 @@ body {
     width: 100%
 }
 
-.edit,
-.new-todo {
+.edit,.new-todo {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     border: 1px solid #999;
-    box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, .2);
+    box-shadow: inset 0 -1px 5px 0 rgba(0,0,0,.2);
     box-sizing: border-box;
     color: inherit;
     font-family: inherit;
@@ -101,22 +114,18 @@ body {
     width: 100%
 }
 
-.toggle-all-container {
-    position: absolute;
+.new-todo {
+    background: rgba(0,0,0,.003);
+    border: none;
+    box-shadow: inset 0 -2px 1px rgba(0,0,0,.03);
     height: 65px;
-    display: flex;
-    align-items: center;
-    z-index: 1;
+    padding: 16px 16px 16px 60px
 }
 
-.new-todo {
-    background: rgba(0, 0, 0, .003);
-    border: none;
-    box-shadow: inset 0 -2px 1px rgba(0, 0, 0, .03);
-    height: 65px;
-    padding: 16px 16px 16px 60px;
+.main {
+    border-top: 1px solid #e6e6e6;
     position: relative;
-    z-index: 0;
+    z-index: 2
 }
 
 .toggle-all {
@@ -178,9 +187,9 @@ body {
 
 .todo-list li.editing .edit {
     display: block;
-    margin: 0 0 0 43px;
-    padding: 12px 16px;
-    width: calc(100% - 43px)
+    margin: 0;
+    padding: 12px 16px 12px 59px;
+    width: 100%;
 }
 
 .todo-list li.editing .view {
@@ -240,8 +249,7 @@ body {
     width: 40px
 }
 
-.todo-list li .destroy:focus,
-.todo-list li .destroy:hover {
+.todo-list li .destroy:focus,.todo-list li .destroy:hover {
     color: #c18585
 }
 
@@ -274,7 +282,7 @@ body {
 
 .footer:before {
     bottom: 0;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, .2), 0 8px 0 -3px #f6f6f6, 0 9px 1px -3px rgba(0, 0, 0, .2), 0 16px 0 -6px #f6f6f6, 0 17px 2px -6px rgba(0, 0, 0, .2);
+    box-shadow: 0 1px 1px rgba(0,0,0,.2),0 8px 0 -3px #f6f6f6,0 9px 1px -3px rgba(0,0,0,.2),0 16px 0 -6px #f6f6f6,0 17px 2px -6px rgba(0,0,0,.2);
     content: "";
     height: 50px;
     left: 0;
@@ -322,8 +330,7 @@ body {
     border-color: #ce4646
 }
 
-.clear-completed,
-html .clear-completed:active {
+.clear-completed,html .clear-completed:active {
     cursor: pointer;
     float: right;
     line-height: 19px;
@@ -335,11 +342,69 @@ html .clear-completed:active {
     text-decoration: underline
 }
 
-@media screen and (-webkit-min-device-pixel-ratio: 0) {
+.info {
+    color: #4d4d4d;
+    font-size: 11px;
+    margin: 65px auto 0;
+    text-align: center;
+    text-shadow: 0 1px 0 hsla(0,0%,100%,.5)
+}
 
-    .todo-list li .toggle,
-    .toggle-all {
-        background: none
+.info p {
+    line-height: 1
+}
+
+.info a {
+    color: inherit;
+    font-weight: 400;
+    text-decoration: none
+}
+
+.info a:hover {
+    text-decoration: underline
+}
+
+.error-404-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 60vh;
+  color: #d32f2f;
+  font-family: 'Segoe UI', Arial, sans-serif;
+  border-radius: 12px;
+  margin: 40px auto;
+  max-width: 400px;
+  padding: 32px 24px;
+}
+
+.error-404-title {
+  font-size: 3rem;
+  font-weight: bold;
+  margin-bottom: 12px;
+  letter-spacing: 2px;
+}
+
+.error-404-message {
+  font-size: 1.2rem;
+  margin-bottom: 20px;
+  color: #b71c1c;
+}
+
+.error-404-link {
+  color: #6aa7e4;
+  font-weight: bold;
+  text-decoration: none;
+  transition: color 0.2s;
+}
+
+.error-404-link:hover {
+  color: #0d47a1;
+}
+
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+    .todo-list li .toggle,.toggle-all {
+        background:none
     }
 
     .todo-list li .toggle {
@@ -349,7 +414,7 @@ html .clear-completed:active {
 
 @media (max-width: 430px) {
     .footer {
-        height: 50px
+        height:50px
     }
 
     .filters {
@@ -357,9 +422,149 @@ html .clear-completed:active {
     }
 }
 
-.toggle-all:focus+label,
-.toggle:focus+label,
-:focus {
+.toggle-all:focus+label,.toggle:focus+label,:focus {
     box-shadow: 0 0 2px 2px #cf7d7d;
     outline: 0
 }
+
+hr {
+    border: 0;
+    border-bottom: 1px dashed #f7f7f7;
+    border-top: 1px dashed #c5c5c5;
+    margin: 20px 0
+}
+
+.learn a {
+    color: #b83f45;
+    font-weight: 400;
+    text-decoration: none
+}
+
+.learn a:hover {
+    color: #787e7e;
+    text-decoration: underline
+}
+
+.learn h3,.learn h4,.learn h5 {
+    color: #000;
+    font-weight: 500;
+    line-height: 1.2;
+    margin: 10px 0
+}
+
+.learn h3 {
+    font-size: 24px
+}
+
+.learn h4 {
+    font-size: 18px
+}
+
+.learn h5 {
+    font-size: 14px;
+    margin-bottom: 0
+}
+
+.learn ul {
+    margin: 0 0 30px 25px;
+    padding: 0
+}
+
+.learn li {
+    line-height: 20px
+}
+
+.learn p {
+    font-size: 15px;
+    font-weight: 300;
+    line-height: 1.3;
+    margin-bottom: 0;
+    margin-top: 0
+}
+
+#issue-count {
+    display: none
+}
+
+.quote {
+    border: none;
+    margin: 20px 0 60px
+}
+
+.quote p {
+    font-style: italic
+}
+
+.quote p:before {
+    content: "“";
+    left: 3px;
+    top: -20px
+}
+
+.quote p:after,.quote p:before {
+    font-size: 50px;
+    opacity: .15;
+    position: absolute
+}
+
+.quote p:after {
+    bottom: -42px;
+    content: "”";
+    right: 3px
+}
+
+.quote footer {
+    bottom: -40px;
+    position: absolute;
+    right: 0
+}
+
+.quote footer img {
+    border-radius: 3px
+}
+
+.quote footer a {
+    margin-left: 5px;
+    vertical-align: middle
+}
+
+.speech-bubble {
+    background: rgba(0,0,0,.04);
+    border-radius: 5px;
+    padding: 10px;
+    position: relative
+}
+
+.speech-bubble:after {
+    border: 13px solid transparent;
+    border-top-color: rgba(0,0,0,.04);
+    content: "";
+    position: absolute;
+    right: 30px;
+    top: 100%
+}
+
+.learn-bar>.learn {
+    background-color: hsla(0,0%,100%,.6);
+    border-radius: 5px;
+    left: -300px;
+    padding: 10px;
+    position: absolute;
+    top: 8px;
+    transition-duration: .5s;
+    transition-property: left;
+    width: 272px
+}
+
+@media (min-width: 899px) {
+    .learn-bar {
+        padding-left:300px;
+        width: auto
+    }
+
+    .learn-bar>.learn {
+        left: 8px
+    }
+}
+
+/*# sourceMappingURL=app.css.map*/
